--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-router-dom": "^4.3.1",
         "react-router-redux": "^4.0.8",
         "redux": "^4.0.0",
+        "redux-form": "^7.4.2",
         "redux-promise-middleware": "^5.1.1",
         "redux-thunk": "^2.3.0"
     }
